# fx2lpdds

./: .gitignore  README.md
fx2lpdds/firmware/fx2lpdds/: FX2LPDDS  FX2LPDDS.LST  FX2LPDDS.M51  FX2LPDDS.Opt  FX2LPDDS.Uv2  FX2LPDDS.c  FX2LPDDS.hex  FX2LPDDS.iic  FX2LPDDS.lnp  FX2LPDDS.plg  dscr.LST  dscr.a51  fw.LST  gpif.LST  gpif.__i  gpif.c  gpif.gpf
fx2lpdds/software/: CMakeLists.txt  fx2lpddscomm.c  fx2lpddscomm.h  fx2lpddsfm.c  metricprefix.c  metricprefix.h  modulators.c  modulators.h  readers.c  readers.h  stereo_sine_wahwah.c  sweep.c
